--- a/index.html
+++ b/index.html
@@ -1,24 +1,106 @@
 <!DOCTYPE html>
-<html lang="en" >
+<!-- <html lang="en" > -->
+<html lang="zh" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Canvas Fireworks</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-<link rel="stylesheet" href="./style.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+  <title>HAPPY BIRTHDAY</title>
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:900'>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.css'><link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./style_cake.css">
+  <link rel="stylesheet" href="./style_time.css">
+  <link rel="stylesheet" href="./style_photo.css">
+  <link rel="stylesheet" href="./style_birthday_cake.css">
+  <link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Crafty+Girls|Dawning+of+a+New+Day|Homemade+Apple|Nanum+Brush+Script" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<div id="gui"></div>		
-<div id="canvas-container">
-  <div id="mountains2"></div>
-  <div id="mountains1"></div>
-  <div id="skyline"></div>
+  <div class="bg-img">
+<!-- cake start -->
+<!-- <h1 class="challenge-title">For the most Marvellous Being</h1> -->
+
+<div class="hb-container">
+	<h3 class="happy">Happy</h3>
+	<h3 class="twentyseven">27th</h3>
+	<h3 class="birthday">Birthday!</h3>
+	<div class="ballon">
+		<svg id="ballon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 462.4 462.4" style="enable-background:new 0 0 462.4 462.4;" xml:space="preserve">
+			<path d="M352,142C352,63.6,298,0,231.2,0S110.4,64,110.4,142.4c0,68.8,42,126.4,97.2,139.6l-14,34.4c-0.8,2-0.4,4,0.4,5.6    c1.2,1.6,2.8,2.8,4.8,2.8H218c-9.2,18-15.6,45.6,6.8,62.8c24.4,18.8-7.6,64.8-8,65.2c-2,2.8-1.2,6.4,1.6,8.4    c1.2,0.8,2.4,1.2,3.6,1.2c2,0,3.6-0.8,4.8-2.4c1.6-2.4,38.8-56,5.2-81.6c-21.2-16-5.6-44.4-0.4-53.2h25.2c2,0,4-1.2,5.2-2.8    s1.2-4,0.4-5.6l-13.2-34C307.2,272.8,352,213.6,352,142z M208,312.4l11.6-28.8c4,0.4,7.6,0.8,11.6,0.8c2,0,3.6,0,5.2,0l12,28H208z     M231.2,272.4c-60,0-108.8-58.4-108.8-130.4c0-71.6,48.8-130,108.8-130S340,70.4,340,142.4C340,214,291.2,272.4,231.2,272.4z" />
+		</svg>
+	</div>
+	<div class="ballon">
+		<svg id="ballon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 462.4 462.4" style="enable-background:new 0 0 462.4 462.4;" xml:space="preserve">
+			<path d="M352,142C352,63.6,298,0,231.2,0S110.4,64,110.4,142.4c0,68.8,42,126.4,97.2,139.6l-14,34.4c-0.8,2-0.4,4,0.4,5.6    c1.2,1.6,2.8,2.8,4.8,2.8H218c-9.2,18-15.6,45.6,6.8,62.8c24.4,18.8-7.6,64.8-8,65.2c-2,2.8-1.2,6.4,1.6,8.4    c1.2,0.8,2.4,1.2,3.6,1.2c2,0,3.6-0.8,4.8-2.4c1.6-2.4,38.8-56,5.2-81.6c-21.2-16-5.6-44.4-0.4-53.2h25.2c2,0,4-1.2,5.2-2.8    s1.2-4,0.4-5.6l-13.2-34C307.2,272.8,352,213.6,352,142z M208,312.4l11.6-28.8c4,0.4,7.6,0.8,11.6,0.8c2,0,3.6,0,5.2,0l12,28H208z     M231.2,272.4c-60,0-108.8-58.4-108.8-130.4c0-71.6,48.8-130,108.8-130S340,70.4,340,142.4C340,214,291.2,272.4,231.2,272.4z" />
+		</svg>
+	</div>
+	<div class="ballon">
+		<svg id="ballon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 462.4 462.4" style="enable-background:new 0 0 462.4 462.4;" xml:space="preserve">
+			<path d="M352,142C352,63.6,298,0,231.2,0S110.4,64,110.4,142.4c0,68.8,42,126.4,97.2,139.6l-14,34.4c-0.8,2-0.4,4,0.4,5.6    c1.2,1.6,2.8,2.8,4.8,2.8H218c-9.2,18-15.6,45.6,6.8,62.8c24.4,18.8-7.6,64.8-8,65.2c-2,2.8-1.2,6.4,1.6,8.4    c1.2,0.8,2.4,1.2,3.6,1.2c2,0,3.6-0.8,4.8-2.4c1.6-2.4,38.8-56,5.2-81.6c-21.2-16-5.6-44.4-0.4-53.2h25.2c2,0,4-1.2,5.2-2.8    s1.2-4,0.4-5.6l-13.2-34C307.2,272.8,352,213.6,352,142z M208,312.4l11.6-28.8c4,0.4,7.6,0.8,11.6,0.8c2,0,3.6,0,5.2,0l12,28H208z     M231.2,272.4c-60,0-108.8-58.4-108.8-130.4c0-71.6,48.8-130,108.8-130S340,70.4,340,142.4C340,214,291.2,272.4,231.2,272.4z" />
+		</svg>
+	</div>
+	<div class="ballon">
+		<svg id="ballon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 462.4 462.4" style="enable-background:new 0 0 462.4 462.4;" xml:space="preserve">
+			<path d="M352,142C352,63.6,298,0,231.2,0S110.4,64,110.4,142.4c0,68.8,42,126.4,97.2,139.6l-14,34.4c-0.8,2-0.4,4,0.4,5.6    c1.2,1.6,2.8,2.8,4.8,2.8H218c-9.2,18-15.6,45.6,6.8,62.8c24.4,18.8-7.6,64.8-8,65.2c-2,2.8-1.2,6.4,1.6,8.4    c1.2,0.8,2.4,1.2,3.6,1.2c2,0,3.6-0.8,4.8-2.4c1.6-2.4,38.8-56,5.2-81.6c-21.2-16-5.6-44.4-0.4-53.2h25.2c2,0,4-1.2,5.2-2.8    s1.2-4,0.4-5.6l-13.2-34C307.2,272.8,352,213.6,352,142z M208,312.4l11.6-28.8c4,0.4,7.6,0.8,11.6,0.8c2,0,3.6,0,5.2,0l12,28H208z     M231.2,272.4c-60,0-108.8-58.4-108.8-130.4c0-71.6,48.8-130,108.8-130S340,70.4,340,142.4C340,214,291.2,272.4,231.2,272.4z" />
+		</svg>
+	</div>
+  
 </div>
+    
+<!-- cake end -->
+
+
+
+<div id="timer">
+  <div id="days"></div>
+  <div id="hours"></div>
+  <div id="minutes"></div>
+  <div id="seconds"></div>
+</div>
+
+
+  <div class="back-frame">
+    <div class="pin"></div>
+    <div class="photo-frame">
+      <div class="photo-inner">
+        <div class="layer"></div>
+      </div>
+      <!-- <div class="description">Calculator App</div> -->
+      <div class="description">中国人</div>
+    </div>
+  </div>
+   
+  
+  <div class="photo-frame">
+      <div class="photo-inner">
+        <div class="layer"></div>
+      </div>
+      <div class="description">Kaleb's Tribute <br>Site</div>
+    </div>
+  
+
+  <div class="cake"></div>
+
+    <!-- <canvas id="birthday"></canvas>
+
+    <div id="cat"></div>
+    <div id="pic1"></div>
+    <div id="pic2"></div> -->
+
+    <!-- <div id="fire">学习使我快乐</div>
+    <div id="neon">Study make me happy!</div>
+    <div class="hover">Hover me</div> -->
+    
+  </div>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='https://jackrugile.com/lab/fireworks-v2/js/dat.gui.min.js'></script><script  src="./script.js"></script>
+  <script src='https://jackrugile.com/lab/fireworks-v2/js/dat.gui.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js'></script>
+  <script  src="./script.js"></script>
+  <script  src="./script_cake.js"></script>
+  <script  src="./script_time.js"></script>
 
 </body>
 </html>
