--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
   <link rel="stylesheet" href="./style_photo.css">
   <link rel="stylesheet" href="./style_birthday_cake.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-  <audio class="song" src="./audio/onlymp3.to - Happy Birthday to You Birthday Song Music Box -x3xfijEQufU-192k-1698575389.mp3" autoplay="autoplay" loop="loop"></audio>
+  
 </head>
 
 <body>
+  <audio class="song" controls="1" autoplay="1" src="./audio/onlymp3.to - Happy Birthday to You Birthday Song Music Box -x3xfijEQufU-192k-1698575389.mp3" loop="loop"></audio>
 
   <!-- <div class="bg-img"></div> -->
 
@@ -103,7 +104,7 @@
     <div id="fire">宝贝生日快乐！要放烟花了！</div>
     <div id="neon">我们已经在一起这么久了！</div>
 
-    <div id="neon2">最后祝我的宝贝生日快乐！永远爱你！</div>
+    <div id="neon2">祝我的宝贝生日快乐！永远爱你！</div>
 
     <div class="eggcat"></div>
 
@@ -127,6 +128,8 @@
   <script src="./script.js"></script>
   <script src="./script_cake.js"></script>
   <script src="./script_time.js"></script>
+
+
 
 </body>
 
